# shell

./: .gitignore  CMakeLists.txt  README.md
include/: argument_handler.h  command_handler.h  command_parser.h  deldir.h  delfile.h  fetch.h  goto.h  guide.h  info.h  list.h  macros.h  newdir.h  newfile.h  read.h  utils.h
scripts/: build.sh  clean.sh  install.sh
src/: argument_handler.c  command_handler.c  command_parser.c  main.c  utils.c
src/commands/: .fetch.c.swp  deldir.c  delfile.c  fetch.c  goto.c  list.c  newdir.c  newfile.c  read.c
src/utils/: guide.c  info.c
